--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,20 @@
-blinker==1.9.0
-click==8.1.8
-Flask==3.1.0
-itsdangerous==2.2.0
-Jinja2==3.1.6
-MarkupSafe==3.0.2
-numpy==2.2.5
-pandas==2.2.3
+certifi==2021.10.8
+chardet==4.0.0
+click==7.1.2
+Flask==1.1.4
+fpdf==1.7.2
+idna==2.10
+itsdangerous==1.1.0
+Jinja2==2.11.3
+MarkupSafe==1.1.1
+numpy==1.16.6
+pandas==0.24.2
 python-dateutil==2.9.0.post0
+python-dotenv==0.18.0
 pytz==2025.2
+requests==2.27.1
 six==1.17.0
-tzdata==2025.2
-Werkzeug==3.1.3
+typing==3.10.0.0
+UNKNOWN==0.0.0
+urllib3==1.26.20
+Werkzeug==1.0.1
